--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -141,10 +141,10 @@
     padding: 5px;
     margin: 0 5px 5px 0;
   }
-
+  
   footer {
     margin-top: 100px;
-    padding-top: 100px;
+    background-color: whitesmoke;
 }
 
   
